force-app/main/default/objects/Open_Source__c/Open_Source__c.object-meta.xml
<CustomObject>
    <label>Open Source</label>
    <nameField>
        <label>Open Source Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Open Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>