force-app/main/default/objects/Open_Source__c/fields/Copyright_Disclosure__c.field-meta.xml
<CustomField>
    <fullName>Copyright_Disclosure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Copyright Disclosure</label>
    <referenceTo>Copyright_Disclosure__c</referenceTo>
    <relationshipLabel>Open Sources</relationshipLabel>
    <relationshipName>Open_Sources</relationshipName>
    <type>Lookup</type>
</CustomField>