force-app/main/default/objects/Open_Source__c/fields/Open_Source_Licensing__c.field-meta.xml
<CustomField>
    <fullName>Open_Source_Licensing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Open Source Licensing</label>
    <type>Checkbox</type>
</CustomField>