force-app/main/default/objects/Open_Source__c/fields/Open_Source_Licensing_Type__c.field-meta.xml
<CustomField>
    <fullName>Open_Source_Licensing_Type__c</fullName>
    <label>Open Source License Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BSD License</fullName>
            </value>
            <value>
                <fullName>GPL v2 License</fullName>
            </value>
            <value>
                <fullName>LGPL v2 License</fullName>
            </value>
            <value>
                <fullName>AttributionCC BY</fullName>
            </value>
            <value>
                <fullName>Attribution-ShareAlikeCC BY-SA</fullName>
            </value>
            <value>
                <fullName>Attribution-NoDerivsCC BY-ND</fullName>
            </value>
            <value>
                <fullName>Attribution-NonCommercialCC BY-NC</fullName>
            </value>
            <value>
                <fullName>Attribution-NonCommercial-ShareAlikeCC BY-NC-SA</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>