force-app/main/default/objects/Open_Source__c/fields/Open_Source_Other_Comments__c.field-meta.xml
<CustomField>
    <fullName>Open_Source_Other_Comments__c</fullName>
    <label>Open Source Other Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>