force-app/main/default/objects/Open_Source__c/fields/Publicly_Available_Details__c.field-meta.xml
<CustomField>
    <fullName>Publicly_Available_Details__c</fullName>
    <description>If this software is primarily being disclosed for research and academic use, or in conjunction with an open-source license, briefly describe where you plan to make it publicly available? (GitHub, MIT lab or personal website, other, etc.)</description>
    <label>Publicly Available Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>