force-app/main/default/objects/Open_Source__c/recordTypes/Copyright_Disclosure.recordType-meta.xml
<RecordType>
    <fullName>Copyright_Disclosure</fullName>
    <active>true</active>
    <label>Copyright_Disclosure</label>
</RecordType>