force-app/main/default/objects/Open_Source__c/recordTypes/Software_Code_Disclosure.recordType-meta.xml
<RecordType>
    <fullName>Software_Code_Disclosure</fullName>
    <active>true</active>
    <label>Software_Code_Disclosure</label>
</RecordType>